# neovim-container

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  compose.override.yml  compose.yml  entrypoint.sh  nvim.sh  option.sh
.config/nvim/: init.lua
.config/nvim/lua/: core.lua  plugin.lua
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_push.yml  ci.yml  release.yml
image/: Dockerfile
image/.config/nvim/: init.lua
image/.config/nvim/lua/: plugin.lua
image/.config/nvim/lua/disable_plugins/: neogit.lua
image/.config/nvim/lua/plugins/: gitsigns.lua  hybrid-material.lua  mason-lspconfig.lua  neogit.lua  null-ls.lua  telekasten.lua
image/scripts/: copy.sh  paste.sh
scripts/: build.sh  build_and_run.sh  run.sh
src/: action.rs  cli.rs  command_executor.rs  config_reader.rs  constants.rs  container_config.rs  container_runner.rs  directory_state.rs  main.rs  non_pure.rs  path.rs  telekasten.rs  update_binary.rs
src/clipboard/: from_container.rs  from_host.rs  mod.rs
src/container_runner/: command_executor_cor.rs  create_command_cor.rs  mod.rs
src/interface/: config_reader.rs  mod.rs
src/interface/terminal_command/: get_win_clipboard_command.rs  mod.rs  run_from_string_command.rs  run_nvim_container_command.rs  set_win_clipboard_command.rs
src/terminal_command/: get_clipboard_win.rs  mod.rs  pull_image_command.rs  run_nvim_container_command.rs  set_host_clipboard_command_executor.rs
