[package]
name = "neovim-container"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.28.0", features = ["fs", "process"] }
dirs = "5.0.1"
pathdiff = "0.2.1"
clap = { version = "4.5.4", features = ["derive"] }
self_update = { version = "0.39.0", default-features = false, features = [
    "rustls",
] }

[features]
default = []
develop = []
